# omnia

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  docker-compose.dev.yml  docker-compose.yml  docs  eslint.config.mjs  intent.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  vitest.config.evals.ts  vitest.config.ts  vitest.workspace.ts
.github/workflows/: build-image.yml  python-ci.yml
apps/cli/: tsconfig.json
apps/gui/: Dockerfile  Dockerfile.dev  components.json  package.json
apps/gui/public/: output.webm
apps/gui/src/app/: actions.ts  globals.css  layout.tsx  page.tsx
apps/gui/src/lib/: provider-manager.ts  simulation-types.ts  simulation.ts
cli/: package.json  tsconfig.json
cli/src/: index.ts
content/demo/scenarios/: talking-room.json
content/scenario-builder/: next.config.ts  package.json
content/scenario-builder/src/: proxy.ts
content/scenario-builder/src/app/: globals.css  (+1 more)
content/scenario-core/src/: loader.ts
content/scenario-core/tests/: talking-room.test.ts
docs/: actor.md  architect.md  intents.md  testing.md
src/omnia/: config.py  main.py
src/omnia/db/: client.py  collections.py
src/omnia/models/: base.py  character.py  item.py  world.py
src/omnia/repositories/: character_repo.py  item_repo.py  location_repo.py
src/omnia/routers/: characters.py  locations.py
tests/evals/: google-genai.eval.ts
tests/integration/: actor-monologue.test.ts  game-loop.test.ts
web/docs/: astro.config.mjs  package.json
web/landing/: package.json
(+40 files in other folders)
